# profilarrdb

./: .gitignore  README.md  pyproject.toml
bundles/: custom_formats.json  profiles.json  regex_patterns.json  version.json  wiki.json
custom_formats/: (R) Extras.yml  (R) HD Bluray Tier 01.yml  (R) HD Bluray Tier 02.yml  (R) Obfuscated.yml  (R) P2P Internal.yml  (R) PCOK.yml  (R) PMTP.yml  (R) Remux Tier 01.yml  (R) Remux Tier 02.yml  (R) Scene.yml  (R) TrueHD ATMOS.yml  (R) Upscaled.yml  (R) x264.yml  (R) x265.yml  (R) x266.yml  (S) Extras.yml  (S) HD Bluray Tier 01.yml  (S) HD Bluray Tier 02.yml  (S) Obfuscated.yml  (S) P2P Internal.yml  (S) PCOK.yml  (S) PMTP.yml  (S) Remux Tier 01.yml  (S) Remux Tier 02.yml  (S) Scene.yml  (S) TrueHD ATMOS.yml  (S) Upscaled.yml  (S) x264.yml  (S) x265.yml  (S) x266.yml  1.0 Mono.yml  1080p.yml  10bit.yml  126811.yml  2.0 Stereo.yml  2160p.yml  3.0 Sound.yml  3D.yml  4.0 Sound.yml  4K Remaster.yml  (+188 more)
media_management/: naming.yml  quality_definitions.yml
profilarr_stable.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
profiles/: (R) Anime (Bypass Dub).yml  (R) Anime.yml  (R) Base Profile.yml  (R) HD Bluray + WEB.yml  (R) Movies (Bypass Dub).yml  (R) Movies.yml  (R) Remux + WEB 1080p.yml  (R) Remux + WEB 2160p.yml  (R) Remux 2160p (Alternative).yml  (R) Remux 2160p (Combined).yml  (R) UHD Bluray + WEB.yml  (R) [Anime] Remux-1080p.yml  (S) Anime (Season Pack Bypass Dub).yml  (S) Anime (Season Packs).yml  (S) Anime (Singles Bypass Dub).yml  (S) Anime (Singles).yml  (S) TV (Season Packs Bypass Dub).yml  (S) TV (Season Packs).yml  (+8 more)
(+1036 files in other folders)
