[project]
name = "profilarr-stable"
version = "0.1.0"
description = "Profilarr database and sync scripts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pylint>=3.0",
]

[tool.setuptools]
packages = ["scripts.utils"]
package-dir = {"" = "."}
